# TAED2-TENCFIM

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  OBJECTIVES AND REQUIREMENTS.docx  README.md  data.dvc  dataset-card.md  dvc.yaml  emissions.csv  model_card.md  pyproject.toml
.dvc/: config
data/raw/: test.csv.dvc  train.csv.dvc
gx/: great_expectations.yml
gx/checkpoints/: validation_checkpoint.json
gx/data_docs/: index.html
gx/data_docs/expectations/: data_quality_validation.html
gx/data_docs/validations/data_quality_validation/__none__/20250930T133102.709289Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20250930T133121.652247Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20250930T134358.594017Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20251007T121914.752983Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20251007T122044.168345Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T132321.799267Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T132401.999750Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T132446.200986Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T132726.366267Z/: pandas-clean_emotions.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T132740.472003Z/: pandas-clean_emotions.html
gx/expectations/: .ge_store_backend_id  data_quality_validation.json
gx/validation_definitions/: clean_data_validator.json
notebooks/: shap.ipynb
src/: config.py  services.py
src/api/: api.py  app_streamlit.py  schemas.py
src/data/: download_raw_dataset.py  gx_context_configuration.py  preprocess.py  split_data.py  validate_data.py
src/modeling/: download_model.py  train.py
src/pylint/: test.py
tests/: test_api.py  test_apì.py  test_data.py  test_model.py
tests/aux_files/: long-text.txt  multiple-texts.txt
