[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TENCFIM"
version = "0.0.1"
description = "Sentiment analysis for text source"
authors = [
  { name = "TENCFIM" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "dagshub>=0.6.3",
    "datasets>=4.1.1",
    "dvc>=3.63.0",
    "evaluate>=0.4.6",
    "mlflow<3.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip",
    "python-dotenv",
    "ruff",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["TENCFIM"]
include = ["pyproject.toml", "TENCFIM/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["TENCFIM"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
]

