[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TENCFIM"
version = "0.0.1"
description = "Sentiment analysis for text source"
authors = [
  { name = "TENCFIM" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "pip",
    "great-expectations==1.5.8",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "loguru",
    "dagshub",
    "datasets",
    "dvc",
    "evaluate",
    "mlflow[extras]",
    "protobuf",
    "python-dotenv",
    "ruff",
    "torch",
    "transformers[torch]",
    "pydantic>=2.11.9",
    "codecarbon>=3.0.6",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["TENCFIM"]
include = ["pyproject.toml", "TENCFIM/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["TENCFIM"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = "--junitxml=out/tests-report.xml --cov=src --cov-report=html:reports/coverage"

[tool.coverage.run]
omit = ["src/data/validate_data.py", "src/data/gx_context_configuration.py", "src/modeling/train.py"]

